crates/typechecker/tests/snapshots/fixture_test__match_nested.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
Cons: forall b. fn(b, List<b>) -> List<b>
Nil: forall b. List<b>
sum_first_two: fn(List<Int>) -> Int
