crates/typechecker/tests/snapshots/fixture_test__match_option.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
Some: forall f. fn(f) -> Option[f]
None: forall f. Option[f]
unwrap_or: forall q. fn(Option[q], q) -> q
