crates/typechecker/tests/snapshots/fixture_test__match_own_exhaustive.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
Red: Color
Green: Color
Blue: Color
test: fn(own Color) -> Int
